--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ nav{
 nav img{
        width: 150px;
 }
-.nav-links{;
+.nav-links{
     flex: 1;
     text-align: right;    
 }
@@ -157,12 +157,203 @@ p{
     display: flex;
     justify-content: space-between;
 }
+.course-col{
+    flex-basis: 31%;
+    background:#fff3f3;
+    border-radius: 10px;
+    margin: bottom 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.5s;
+
+}
+h3{
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+
+}
+.course-col:hover{
+    box-shadow: 0 0 20px  0px  rgba(0, 0, 0, 0.2);
+}
+@media(max-width:700px){
+    .row{
+        flex-direction: column;
+    } 
+    .course-col{
+        margin: 10px;
+    }
+}
+
+/* campus */
+
+.campus{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+
+}
+.campus-col{
+    flex-basis: 32%;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
+}
+.campus-col img{
+    width: 100%;
+    display: block;
 
 
+}
+.layer{
+    background:transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top:0;
+    left: 0;
+    transition: 0.5s;
+}
+.layer:hover{
+    background: rgba(226 ,0 ,0 ,0.7);
+
+}
+.layer h3{
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size:26px ;
+    bottom: 0;
+    left:50% ;
+    transform: translateX(-50%);
+    position: absolute;
+    opacity: 0;
+    transition: 0.5s;
+}
+.layer:hover h3{
+    bottom: 49%;
+    opacity: 1;
+}
+/* facilities */
+
+.facilities{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+
+}
+.facilities-col{
+    flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+
+}
+.facilities-col  img{
+    width: 100%;
+    border-radius: 10px;
 
 
+}
+.facilities-col  p{
+    padding: o;
+
+}
+.facilities-col h3{
+    margin-top: 16 px;
+    margin-bottom: 15px;
+    text-align: left;
+
+}
+/* testimonials */
+.testimonials{
+    width: 80%;
+    margin:auto;
+    padding-top: 100px;
+    text-align: center;
+
+}
+.testimonials-col{
+    flex-basis: 44%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+    background: #fff3f3;
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
+
+}
+.testimonials-col img{
+    height: 40px;
+    margin-left: 5px;
+    margin-right: 30px;
+    border-radius: 50%;
+
+}
+.testimonials-col  p{
+    padding: 0;
+
+}
+
+.testimonials-col  h3{
+    margin-top: 15px;
+    text-align: left;
+
+}
+.testimonials-col .fa{
+    color: #f44336;
+}
+
+@media(max-width:700px){
+ .testimonials-col img{
+
+    margin-left: 0px;
+    margin-right: 15px;
+  
+
+}
+}
+/* call to action */
+.cta{
+    margin: 100px auto;
+    width: 80%;
+    background-image: url(./assests/images/banner2.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
+}
+.cta h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+
+}
+@media(max-width: 700px){
+    .cta h1{
+        font-size: 24px;
+    }
+}
+/* footer */
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
 
 
+}
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+
+
+}
 
 
 
